Fixed archive window spacing, images and widget borders.
git-svn-id: http://yate.null.ro/svn/yate/trunk@4865 acf43c95-373e-0410-b603-e72c3f656dc1

--- a/share/skins/default/stylesheet.css
+++ b/share/skins/default/stylesheet.css
@@ -49,6 +49,7 @@ QTextEdit {
 /* QTextBrowser */
 QTextBrowser {
   font-size: 12px;
+  border: 1px solid #717fa0;
 }
 
 /* QToolButton */
